--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
     width: 100%;
 }
 header {
-    background-color: rgba(0, 149, 255, 0.714);
+    background-color: rgba(0, 149, 255, 0.796);
     color: white;
     text-align: center;
     width: 100%;
@@ -12,16 +12,22 @@ header {
     margin: auto;
     padding: 20px;
     line-height: 1.3;
+    justify-content: center;
+    align-items: center;
+    border-radius: solid black;
+}
+ul {
+    list-style-type: none;
 }
 .index ul li a {
     text-decoration: none;
     font-style: bold;
     color: black;
-    font-size: 30px;
+    font-size: 20px;
 
 }
 footer {
-    background-color: rgba(0, 149, 255, 0.714);
+    background-color: rgba(0, 149, 255, 0.796);
     color: white;
     text-align: center;
     font-size: 20px;
